# electron-as-wallpaper

./: .eslintrc.cjs  .eslintrc.json  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  binding.gyp  eslint.config.js  license  package-lock.json  package.json  readme.md  rosepack.ts  tsconfig.json  tsup.config.ts
examples/demo/: index.html  index.js  preload.mjs
examples/input-forwarding/: index.js
examples/screen-size-changed/: index.js
examples/transparent/: index.js
exmaples/demo/: index.js  preload.js
exmaples/input-forwarding/: index.js
exmaples/playground/: index.html  index.js
exmaples/screen-size-changed/: index.js
exmaples/transparent/: index.html  index.js
lib/: index.cpp  main.cpp  main.ts
lib/src/: index.ts
lib/types/: index.d.ts
output/: index.js
source/: index.ts  main.ts
source/binding/: index.cpp
src/: attach.rs  detach.rs  index.cpp  input.rs  lib.rs  reset.rs  window.rs
test/: index.js
test/input-forwarding/: index.js
test/screen-size-changed/: index.js
test/transparent/: index.js
